--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/UP_GMSVC?autoReconnect=true&connectTimeout=3000&socketTimeout=4500&retriesAllDown=3
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?autoReconnect=true&connectTimeout=3000&socketTimeout=4500&retriesAllDown=3
 spring.datasource.username=root
-spring.datasource.password=root.123
+spring.datasource.password=root
 
-# mapper.xml 위치 지정 # **은 하위 폴더 레벨에 상관없이 모든 경로를 뜻하며, *는 아무 이름이나 와도 된다는것을 뜻합니다.
 mybatis.mapper-locations=mybatis/**/*.xml
