--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 mybatis.mapper-locations=mybatis/**/*.xml
+
+logging.level.root=info
+logging.level.com.example.timeline=debug
